# snowfox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_dependencies.sh  release.env  release_info.txt
.github/workflows/: build.yml
includes/: crawler.h  reader.h
src/: CMakeLists.txt  crawler.cpp  reader.cpp  snowfox.cpp
